--- a/source/less/blocks/examples.less
+++ b/source/less/blocks/examples.less
@@ -6,7 +6,7 @@
 
   @media (min-width: @tablet-width) {
     background-image: linear-gradient(#ffffff 56%, #eaeaea 56% 100%);
-    padding: 43px 30px 101px;
+    padding: 29px 30px 101px;
   }
 
   @media (min-width: @desktop-width) {
@@ -49,6 +49,11 @@
     line-height: 24px;
     padding-bottom: 54px;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 436px;
+    padding-bottom: 69px;
+  }
 }
 
 .examples__spent-amount {
@@ -64,7 +69,7 @@
   @media (min-width: @tablet-width) {
     width: 174px;
     font-size: 20px;
-    line-height: 20px;
+    line-height: 28px;
     text-align: end;
   }
 
@@ -85,6 +90,18 @@
   @media (min-width: @desktop-width) {
     display: block;
     align-items: center;
+    padding-bottom: 15px;
+  }
+}
+
+.examples__compare-slider {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: center;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 0 0 230px;
   }
 }
 
