--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -30,7 +30,7 @@
   text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
-    padding: 0 70px 66px;
+    padding: 0 70px 64px;
     font-size: 20px;
     line-height: 30px;
     width: 323px;
@@ -108,6 +108,24 @@
 
 .form__pet-label {
   padding-right: 13px;
+
+  &--mid-long {
+    width: 86px;
+  }
+
+  &--long {
+    width: 166px;
+  }
+
+  @media (min-width: @tablet-width) {
+    &--mid-long {
+      width: 88px;
+    }
+
+    &--long {
+      width: 159px;
+    }
+  }
 }
 
 .form__pet-input {
@@ -233,7 +251,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding-bottom: 76px;
+    padding-bottom: 65px;
 
     .form__title {
       padding: 26px 0 76px;
@@ -282,21 +300,29 @@
 
 .form__mail-label,
 .form__tel-label {
-  padding-right: 10px;
+  padding-right: 20px;
 }
 
 .form__mail-input {
   background-image: url("../img/email-stroke.svg");
   background-size: 20px 20px;
   background-repeat: no-repeat;
-  background-position: 96% 50%;
+  background-position: 93% 50%;
+
+  @media (min-width: @tablet-width) {
+    background-position: 97% 48%;
+  }
 }
 
 .form__tel-input {
   background-image: url("../img/phone-stroke.svg");
   background-size: 20px 20px;
   background-repeat: no-repeat;
-  background-position: 96% 50%;
+  background-position: 92% 50%;
+
+  @media (min-width: @tablet-width) {
+    background-position: 97% 48%;
+  }
 }
 
 .form__mail-input,
@@ -389,7 +415,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding-bottom: 76px;
+    padding-bottom: 60px;
 
     .form__title {
       padding-bottom: 76px;
@@ -477,7 +503,7 @@
 }
 
 .form__field-group--checkboxes {
-  padding-bottom: 40px;
+  padding-bottom: 54px;
 
   .form__title {
     padding-bottom: 40px;
@@ -554,7 +580,7 @@
   font-size: 14px;
   line-height: 16px;
   margin: 0;
-  padding: 21px 0 32px;
+  padding: 21px 0 36px;
   text-align: center;
 
   @media (min-width: @tablet-width) {
@@ -582,7 +608,7 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: row;
-    padding-bottom: 72px;
+    padding-bottom: 78px;
     align-items: center;
 
     p {
