--- a/source/less/blocks/promotion.less
+++ b/source/less/blocks/promotion.less
@@ -3,7 +3,7 @@
   min-width: 280px;
 
   @media (min-width: @tablet-width) {
-    padding: 69px 0 76px 0;
+    padding: 69px 0 80px 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -53,8 +53,9 @@
   @media (min-width: @tablet-width) {
     width: 161px;
     position: absolute;
-    top: 71px;
-    right: 124px;
+    top: 73px;
+    right: 125px;
+    text-align: left;
   }
 
   @media (min-width: @desktop-width) {
@@ -73,14 +74,14 @@
   width: 78px;
   height: 80px;
   top: -120px;
-  left: 30%;
+  left: 27%;
 
   @media (min-width: @tablet-width) {
     background-image: url("../img/promotion__gift-icon.svg");
     width: 80px;
     height: 82px;
     top: -10px;
-    left: -350px;
+    left: -342px;
   }
 
   @media (min-width: @desktop-width) {
