--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -2,9 +2,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 20px 15px 20px;
+  padding: 10px 20px 13px 20px;
   box-sizing: border-box;
   border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 30px 62px 30px;
+    justify-content: unset;
+    border: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 53px 110px 32px;
+    justify-content: space-between;
+  }
 }
 
 .header__nav-toogle {
@@ -17,6 +28,10 @@
   background-image: url("../img/burger-menu-mob.svg");
   background-repeat: no-repeat;
   cursor: pointer;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
 
 .header__nav-toogle--active {
@@ -31,24 +46,15 @@
   cursor: pointer;
 }
 
-@media (min-width: @tablet-width) {
-  .header {
-    padding: 24px 30px 45px 30px;
-    justify-content: unset;
-    border: none;
-  }
-
-  .header__nav-toogle {
-    display: none;
-  }
-
-  .header__logo-text {
-    padding-left: 12px;
-  }
-}
 
 .header__logo-img {
+  @media (min-width: @tablet-width) {
+    padding-right: 94px;
+  }
+
   @media (min-width: @desktop-width) {
+    padding-right: 0;
+
     &:hover {
       opacity: 80%;
     }
@@ -56,17 +62,5 @@
     &:active {
       opacity: 65%;
     }
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .header {
-    padding: 53px 110px 73px;
-  }
-
-  .header__logo-text {
-    height: 60px;
-    width: 125px;
-    padding-left: 14px;
   }
 }
