--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -36,12 +36,16 @@
 
   @media (min-width: @tablet-width) {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding-left: 94px;
 
     &:last-child {
       padding: 0;
     }
+  }
+
+  @media (min-width: @desktop-width) {
+    justify-content: flex-end;
   }
 }
 
@@ -54,7 +58,6 @@
 
   @media (min-width: @tablet-width) {
     padding: 0;
-    padding-right: 35px;
     border-bottom: none;
 
     &:last-child {
@@ -64,6 +67,11 @@
 
   @media (min-width: @desktop-width) {
     z-index: 1;
+    padding: 0 35px 0 0;
+
+    &:first-child {
+      padding-left: 50px;
+    }
 
     &:last-child {
       padding-right: 0;
