--- a/source/less/blocks/products-extra.less
+++ b/source/less/blocks/products-extra.less
@@ -4,7 +4,7 @@
   font-size: 24px;
   line-height: 24px;
   margin: 0;
-  padding: 25px 0 36px;
+  padding: 0 0 36px;
   display: inline-block;
   position: relative;
 
@@ -21,7 +21,7 @@
   @media (min-width: @tablet-width) {
     font-size: 36px;
     line-height: 36px;
-    padding: 0 0 80px;
+    padding: 0 0 80px 37px;
 
     &::after {
       content: "";
@@ -40,7 +40,7 @@
       background-color: #68b738;
       width: 300%;
       top: 19%;
-      right: calc(100% + 37px);
+      right: 100%;
     }
   }
 
