--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -1,12 +1,12 @@
 .programs {
-  padding: 20px;
+  padding: 0 20px 0 20px;
 
   @media (min-width: @tablet-width) {
     padding: 0 30px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 82px 110px 72px;
+    padding: 134px 110px 72px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -24,17 +24,17 @@
     position: absolute;
     box-sizing: border-box;
     text-decoration: none;
-    top: 380px;
+    top: 349px;
     width: 244px;
     margin: 0 0 0 90px;
-    padding: 14px 30px 14px 38px;
+    padding: 16px 0 16px 0;
     font-size: 20px;
     line-height: 20px;
   }
 
   @media (min-width: @desktop-width) {
     margin: 0 0 0 80px;
-    top: 410px;
+    top: 457px;
   }
 }
 
@@ -137,7 +137,7 @@
       width: 268px;
       height: 200px;
       left: 360px;
-      top: 0;
+      top: 9px;
     }
 
     @media (min-width: @desktop-width) {
@@ -159,12 +159,18 @@
   margin: 0;
   padding-bottom: 42px;
   position: relative;
+  width: 227px;
 
   @media (min-width: @tablet-width) {
+    width: auto;
     font-size: 16px;
     line-height: 24px;
     margin: 0;
     padding-bottom: 52px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 27px;
   }
 }
 
