--- a/source/less/blocks/stats.less
+++ b/source/less/blocks/stats.less
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding-bottom: 34px;
+  padding-bottom: 17px;
 
   @media (min-width: @tablet-width) {
     padding-bottom: 0;
@@ -38,6 +38,7 @@
   padding: 14px 0;
   outline: solid 1px #cdcdcd;
   border-radius: 3px;
+  text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
     width: 162px;
