Pixel Perfect desktop update

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -25,6 +25,10 @@
     margin: 0;
     padding: 1px 0 163px 0;
   }
+
+  @media (min-width: @desktop-width) {
+    padding: 42px 0 163px 0;
+  }
 }
 
 @media (min-width: @desktop-width) {
