--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -126,6 +126,12 @@
       width: 159px;
     }
   }
+
+  @media (min-width: @desktop-width) {
+    &--mid-long {
+      width: 90px;
+    }
+  }
 }
 
 .form__pet-input {
@@ -263,7 +269,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-bottom: 76px;
+    padding-bottom: 67px;
 
     .form__title {
       padding: 26px 0 76px;
@@ -619,7 +625,7 @@
 
   @media (min-width: @desktop-width) {
     display: flex;
-    padding-bottom: 72px;
+    padding-bottom: 90px;
 
     p {
       font-size: 16px;
