--- a/source/less/blocks/products-extra.less
+++ b/source/less/blocks/products-extra.less
@@ -48,6 +48,10 @@
     font-size: 36px;
     line-height: 36px;
     padding: 0 0 81px;
+
+    &::before {
+      right: calc(100% + 40px)
+    }
   }
 }
 
