--- a/source/less/blocks/products.less
+++ b/source/less/blocks/products.less
@@ -21,7 +21,6 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 137px 60px;
-
     padding-bottom: 68px;
   }
 
@@ -30,6 +29,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 140px 80px;
+    padding-bottom: 80px;
   }
 }
 
