--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -8,12 +8,15 @@
 
   @media (min-width: @tablet-width) {
     padding: 0 30px 62px 30px;
+    width: 768px;
+    margin: 0 auto;
     justify-content: unset;
     border: none;
   }
 
   @media (min-width: @desktop-width) {
     padding: 53px 110px 32px;
+    width: 1440px;
     justify-content: space-between;
   }
 }
