--- a/source/less/blocks/promotion.less
+++ b/source/less/blocks/promotion.less
@@ -1,9 +1,9 @@
 .promotion {
-  padding: 35px 0;
+  padding: 34px 0 40px;
   min-width: 280px;
 
   @media (min-width: @tablet-width) {
-    padding: 69px 0 80px 0;
+    padding: 64px 0 80px 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -40,7 +40,7 @@
 }
 
 .promotion__description {
-  font-family: "Lato Regular", sans-serif;
+  font-family: "Lato Regular", "Arial", sans-serif;
   width: 161px;
   font-weight: 400;
   font-size: 16px;
@@ -64,6 +64,7 @@
     top: 0;
     right: 0;
     padding: 185px 43px 42px 41px;
+    text-align: center;
   }
 }
 
@@ -73,7 +74,7 @@
   position: absolute;
   width: 78px;
   height: 80px;
-  top: -120px;
+  top: -126px;
   left: 27%;
 
   @media (min-width: @tablet-width) {
