--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,9 +1,13 @@
 .advantages {
-  padding: 20px 20px 35px 20px;
+  padding: 20px 20px 30px 20px;
+  width: 320px;
+  box-sizing: border-box;
+  margin: 0 auto;
   overflow-x: hidden;
 
   @media (min-width: @tablet-width) {
     padding: 45px 30px 47px;
+    width: 708px;
     position: relative;
 
     &::before {
@@ -20,6 +24,8 @@
 
   @media (min-width: @desktop-width) {
     padding: 0 110px 38px;
+    width: 1440px;
+    box-sizing: border-box;
 
     &::before {
       content: none;
@@ -28,7 +34,7 @@
 }
 
 .advantages__title {
-  font-family: "Oswald Regular", sans-serif;
+  font-family: "Oswald Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
@@ -51,16 +57,23 @@
 
   @media (min-width: @tablet-width) {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 374px 247px;
     grid-template-rows: 280px 280px;
     row-gap: 37px;
     max-width: unset;
   }
 
   @media (min-width: @desktop-width) {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    // display: flex;
+    // flex-direction: row;
+    // flex-wrap: wrap;
+    // justify-content: space-between;
+    // margin: 0;
+
+    display: grid;
+    grid-template-columns: 320px 329px 322px 250px;
+    grid-template-rows: auto;
+    // column-gap: 86px;
     margin: 0;
   }
 }
@@ -133,34 +146,38 @@
     &:first-child {
       background-image: url("../img/advantages__number-1.png");
       background-repeat: no-repeat;
-      background-position: bottom 10% right 23%;
+      background-position: bottom 30% right 20%;
       width: 230px;
       padding: 151px 0 57px;
+      box-sizing: border-box;
       margin-right: 0;
     }
 
     &:nth-child(2) {
       background-image: url("../img/advantages__number-2.png");
       background-repeat: no-repeat;
-      background-position: bottom 10% right 0%;
-      width: 230px;
-      padding: 151px 0 57px;
+      background-position: bottom 30% left 94%;
+      width: 246px;
+      padding: 151px 12px 57px 0;
+      box-sizing: border-box;
     }
 
     &:nth-child(3) {
       background-image: url("../img/advantages__number-3.png");
       background-repeat: no-repeat;
-      background-position: bottom 15% right 3%;
-      width: 230px;
+      background-position: bottom 30% right 7%;
+      width: 248px;
       padding: 151px 0 57px;
+      box-sizing: border-box;
     }
 
     &:last-child {
       background-image: url("../img/advantages__number-4.png");
       background-repeat: no-repeat;
-      background-position: bottom 12% right 3%;
-      width: 242px;
+      background-position: bottom 30% right 3%;
+      width: 250px;
       padding: 151px 0 57px;
+      box-sizing: border-box;
 
       p {
         width: 242px;
@@ -170,7 +187,7 @@
 }
 
 .advantages__description {
-  font-family: "Lato Regular", sans-serif;
+  font-family: "Lato Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -206,7 +223,18 @@
       height: 80px;
       left: 0;
       bottom: calc(100% + 31px);
-      top: unset;
+      top: -114px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &::before {
+      background-size: 80px 80px;
+      width: 80px;
+      height: 80px;
+      left: 0;
+      bottom: calc(100% + 31px);
+      top: -118px;
     }
   }
 }
@@ -234,7 +262,20 @@
       height: 80px;
       left: 0;
       bottom: calc(100% + 31px);
-      top: unset;
+      top: -111px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 224px;
+
+    &::before {
+      background-size: 80px 80px;
+      width: 80px;
+      height: 80px;
+      left: 0;
+      bottom: calc(100% + 31px);
+      top: -118px;
     }
   }
 }
@@ -259,7 +300,7 @@
       width: 80px;
       height: 80px;
       left: 0;
-      bottom: calc(100% + 31px);
+      bottom: calc(100% + 34px);
       top: unset;
     }
   }
@@ -280,6 +321,21 @@
   }
 
   @media (min-width: @tablet-width) {
+    .advantages__duration {
+      width: 245px;
+    }
+
+    &::before {
+      background-size: 80px 80px;
+      width: 80px;
+      height: 80px;
+      left: 6px;
+      bottom: calc(100% + 31px);
+      top: unset;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
     .advantages__duration {
       width: 245px;
     }
