--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -6,7 +6,7 @@
   text-transform: uppercase;
   color: @white;
   background-color: @button-color;
-  font-family: "Oswald Regular", sans-serif;
+  font-family: "Oswald Regular", "Arial", sans-serif;
   font-weight: 400;
   border: none;
 
