--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -4,15 +4,19 @@
 
   @media (min-width: @tablet-width) {
     padding: 0 30px;
+    width: 768px;
+    box-sizing: border-box;
+    margin: 0 auto;
   }
 
   @media (min-width: @desktop-width) {
     padding: 0 110px;
+    width: 1440px;
   }
 }
 
 .catalog__title {
-  font-family: "Oswald Regular", sans-serif;
+  font-family: "Oswald Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
