--- a/source/less/blocks/checkboxes.less
+++ b/source/less/blocks/checkboxes.less
@@ -1,5 +1,17 @@
-.checkboxes__input {
-  display: none;
+.checkboxes .form__list {
+  @media (min-width: @desktop-width) {
+    li:first-child {
+      padding-right: 104px;
+    }
+
+    li:nth-child(2) {
+      padding-right: 136px;
+    }
+
+    li:nth-child(3) {
+      padding-right: 197px;
+    }
+  }
 }
 
 .checkboxes__label {
@@ -38,7 +50,7 @@
   outline: 1px solid #bababa;
 }
 
-.checkboxes__input:disabled + .checkboxes__label::before {
+.checkboxes__input:checked:disabled + .checkboxes__label::before {
   outline: 1px solid #a8a8a8;
   opacity: 30%;
 }
@@ -58,4 +70,13 @@
     background-repeat: no-repeat;
     background-size: 24px 18px;
   }
+}
+
+.checkboxes__input:focus + .checkboxes__label::before {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background-color: #ffffff;
+  outline: 1px solid #8d8d8d;
 }
