--- a/source/less/blocks/examples.less
+++ b/source/less/blocks/examples.less
@@ -1,23 +1,43 @@
 .examples {
   background-color: #eaeaea;
   background-size: 50%;
-  padding: 25px 20px 40px;
   border: none;
 
   @media (min-width: @tablet-width) {
     background-image: linear-gradient(#ffffff 56%, #eaeaea 56% 100%);
-    padding: 29px 30px 101px;
+    padding: 0;
   }
 
   @media (min-width: @desktop-width) {
-    background-image: linear-gradient(#ffffff 23%, #eaeaea 23% 77%);
+    background-image: linear-gradient(#ffffff 26%, #eaeaea 26% 77%);
+    padding: 0 0 18px 0;
+    display: flex;
+  }
+}
+
+.examples__block {
+  width: 320px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 25px 20px 40px;
+
+  @media (min-width: @tablet-width) {
+    padding: 29px 30px 105px;
+    width: 708px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1440px;
+    margin: 0 auto;
     padding: 25px 110px 40px;
+    box-sizing: border-box;
     display: flex;
   }
 }
 
 .examples__title {
-  font-family: "Oswald Regular", sans-serif;
+  font-family: "Oswald Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
@@ -37,7 +57,7 @@
 }
 
 .examples__description {
-  font-family: "Lato Regular", sans-serif;
+  font-family: "Lato Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -47,7 +67,7 @@
   @media (min-width: @tablet-width) {
     font-size: 16px;
     line-height: 24px;
-    padding-bottom: 54px;
+    padding-bottom: 50px;
   }
 
   @media (min-width: @desktop-width) {
@@ -58,7 +78,7 @@
 
 .examples__spent-amount {
   margin: 0;
-  font-family: "Oswald Regular", sans-serif;
+  font-family: "Oswald Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
@@ -71,6 +91,7 @@
     font-size: 20px;
     line-height: 28px;
     text-align: end;
+    padding-bottom: 4px;
   }
 
   @media (min-width: @desktop-width) {
@@ -101,7 +122,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 0 0 0 230px;
+    padding: 0 0 0 225px;
   }
 }
 
