--- a/source/less/blocks/form-page.less
+++ b/source/less/blocks/form-page.less
@@ -1,5 +1,6 @@
 .form-page__title {
-  margin: 0;
+  margin: 0 auto;
+  box-sizing: border-box;
   padding: 27px 20px 37px;
   font-size: 36px;
   line-height: 36px;
@@ -9,10 +10,12 @@
     padding: 2px 69px 54px;
     font-size: 60px;
     line-height: 60px;
+    width: 768px;
   }
 
   @media (min-width: @desktop-width) {
     padding: 42px 110px 56px;
+    width: 1440px;
   }
 }
 
