--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -6,7 +6,7 @@
   background-position: right 40% bottom 53%;
   background-color: #5f5f5f;
   background-size: cover;
-  font-family: "Oswald Regular", sans-serif;
+  font-family: "Oswald Regular", "Arial", sans-serif;
   text-align: center;
   margin-bottom: 138px;
   position: relative;
@@ -21,10 +21,11 @@
     position: relative;
     background-image: none;
     background-color: @white;
-    font-family: "Oswald Regular", sans-serif;
+    font-family: "Oswald Regular", "Arial", sans-serif;
     text-align: start;
     padding: 0 30px;
-    margin: 0;
+    margin: 0 auto;
+    width: 708px;
   }
 
   @media (min-width: @desktop-width) {
@@ -34,11 +35,14 @@
     background-repeat: no-repeat;
     background-position: right 40% bottom 53%;
     background-size: 200%;
+    width: 1440px;
+    box-sizing: border-box;
 
     &::before {
       content: "";
       position: absolute;
       background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/index-bg-desk.png");
+      background-color: #5f5f5f;
       width: 720px;
       height: 694px;
       left: 50%;
@@ -113,6 +117,8 @@
   @media (min-width: @tablet-width) {
     display: block;
     margin: 0;
+    width: 709px;
+    height: 609px;
   }
 
   @media (min-width: @desktop-width) {
@@ -121,5 +127,7 @@
     z-index: 1;
     left: -55px;
     top: -5px;
+    width: auto;
+    height: auto;
   }
 }
