--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,5 +1,5 @@
 .main-nav {
-  // display: none;
+  // display: block;
   position: absolute;
   left: 0;
   justify-content: center;
@@ -67,7 +67,7 @@
 
   @media (min-width: @desktop-width) {
     z-index: 1;
-    padding: 0 35px 0 0;
+    padding: 0 23px 0 0;
 
     &:first-child {
       padding-left: 50px;
@@ -83,7 +83,7 @@
   text-decoration: none;
   text-transform: uppercase;
   color: #000000;
-  font-family: "Oswald Medium", sans-serif;
+  font-family: "Oswald Medium", "Arial", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
