--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,7 +1,7 @@
 .page-footer {
   background-color: #f2f2f2;
   margin-top: -5px;
-  font-family: "Lato Regular", sans-serif;
+  font-family: "Lato Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
@@ -58,11 +58,12 @@
 }
 
 .page-footer__item:not(:first-child):not(:last-child) {
-  padding: 20px 70px 21px;
+  padding: 20px 70px 20px;
 
   @media (min-width: @tablet-width) {
     display: flex;
     justify-content: flex-start;
+    flex-wrap: wrap;
     padding: 0 120px 0 0;
   }
 }
