--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,15 +1,16 @@
 .page__body {
   background-color: #ffffff;
   margin: 0 auto;
-  padding: 0;
+  padding: 0 auto;
   width: 100%;
   overflow-x: hidden;
 
   @media (min-width: @tablet-width) {
-    width: 768px;
+    width: 100%;
   }
 
   @media (min-width: @desktop-width) {
-    width: 1440px;
+    padding: 0 auto;
+    margin: 0 auto;
   }
 }
