--- a/source/less/blocks/products-extra.less
+++ b/source/less/blocks/products-extra.less
@@ -1,5 +1,5 @@
 .products-extra__main-title {
-  font-family: "Oswald Regular", sans-serif;
+  font-family: "Oswald Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
@@ -14,7 +14,7 @@
     height: 2px;
     background-color: #68b738;
     width: 300%;
-    top: 45%;
+    top: 25%;
     left: calc(100% + 21px);
   }
 
@@ -40,14 +40,14 @@
       background-color: #68b738;
       width: 300%;
       top: 19%;
-      right: 100%;
+      right: calc(100% + 39px);
     }
   }
 
   @media (min-width: @desktop-width) {
     font-size: 36px;
     line-height: 36px;
-    padding: 0 0 81px;
+    padding: 0 0 76px;
 
     &::before {
       right: calc(100% + 40px);
@@ -58,7 +58,7 @@
 .products-extra__card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  padding: 13px 0 19px 0;
+  padding: 12px 0 19px 0;
   border-top: 1px solid #cdcdcd;
 
   &:last-child {
@@ -66,7 +66,7 @@
   }
 
   p {
-    font-family: "Lato Regular", sans-serif;
+    font-family: "Lato Regular", "Arial", sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 14px;
@@ -128,8 +128,13 @@
   }
 }
 
+.products-extra__link {
+  text-decoration: none;
+  color: #000000;
+}
+
 .products-extra__title {
-  font-family: "Oswald Regular", sans-serif;
+  font-family: "Oswald Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
@@ -182,13 +187,16 @@
   }
 }
 
-.products-extra__order-button {
+.products-extra__order-link {
   grid-column: 1/3;
   font-size: 16px;
   line-height: 20px;
   padding: 10px 109px;
 
+
   @media (min-width: @tablet-width) {
+    text-align: center;
+    box-sizing: border-box;
     width: 632px;
     font-size: 16px;
     line-height: 20px;
@@ -226,6 +234,6 @@
 
 @media (min-width: @desktop-width) {
   .products-extra {
-    padding-bottom: 86px;
+    padding-bottom: 91px;
   }
 }
