--- a/source/less/blocks/program-form.less
+++ b/source/less/blocks/program-form.less
@@ -1,13 +1,18 @@
 .program-form {
   padding: 0 20px;
+  margin: 0 auto;
+  box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
     padding: 0 67px 0 71px;
+    width: 768px;
+    overflow-x: hidden;
   }
 
   @media (min-width: @desktop-width) {
     padding: 0 110px;
-    margin: 0 auto;
+    width: 1440px;
+
   }
 }
 
