--- a/source/less/blocks/radios.less
+++ b/source/less/blocks/radios.less
@@ -6,9 +6,9 @@
   }
 }
 
-.radios__input {
-  display: none;
-}
+// .radios__input {
+//   display: none;
+// }
 
 .radios__label {
   padding-left: 45px;
@@ -22,6 +22,7 @@
 
 .radios__input + .radios__label {
   position: relative;
+  cursor: pointer;
 }
 
 .radios__input + .radios__label::before {
@@ -47,6 +48,10 @@
   outline: 1px solid #bababa;
 }
 
+.radios__input:focus + .radios__label::before {
+  outline: 1px solid #8d8d8d;
+}
+
 .radios__input:disabled + .radios__label::before {
   opacity: 30%;
 }
@@ -69,7 +74,7 @@
   @media (min-width: @tablet-width) {
     width: 18px;
     height: 18px;
-    left: 11px;
+    left: 10px;
     bottom: 6px;
   }
 }
