--- a/source/less/blocks/stats.less
+++ b/source/less/blocks/stats.less
@@ -9,7 +9,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-bottom: 60px;
+    padding-bottom: 55px;
     justify-content: flex-start;
   }
 }
@@ -30,12 +30,12 @@
 .stats__number {
   width: 124px;
   margin: 0;
-  font-family: "Oswald Regular", sans-serif;
+  font-family: "Oswald Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
   text-align: center;
-  padding: 14px 0;
+  padding: 14px 0 18px;
   outline: solid 1px #cdcdcd;
   border-radius: 3px;
   text-transform: uppercase;
@@ -56,7 +56,7 @@
 .stats__text {
   margin: -7px 0 0;
   color: #444444;
-  font-family: "Lato Regular", sans-serif;
+  font-family: "Lato Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 12px;
