--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -3,16 +3,14 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("../fonts/lato/Lato-Regular.woff");
-  src: url("../fonts/lato/Lato-Regular.woff2");
+  src: url("../fonts/lato/Lato-Regular.woff2"), url("../fonts/lato/Lato-Regular.woff");
 }
 
 @font-face {
   font-family: "Oswald Regular";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/oswald/oswaldregular.woff");
-  src: url("../fonts/oswald/oswaldregular.woff2");
+  src: url("../fonts/oswald/oswaldregular.woff2"), url("../fonts/oswald/oswaldregular.woff");
   font-display: swap;
 }
 
@@ -20,7 +18,6 @@
   font-family: "Oswald Medium";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/oswald/oswaldmedium.woff");
-  src: url("../fonts/oswald/oswaldmedium.woff2");
+  src: url("../fonts/oswald/oswaldmedium.woff2"), url("../fonts/oswald/oswaldmedium.woff");
   font-display: swap;
 }
