Form input fixies

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -38,7 +38,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 0 110px 66px;
+    padding: 0 110px 63px;
     width: 1440px;
   }
 }
@@ -68,7 +68,7 @@
 }
 // FIRST SECTION
 .form__field-group--pet {
-  padding-bottom: 24px;
+  padding: 2px 0 24px 0;
   position: relative;
 
   &::before {
@@ -99,7 +99,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 0;
+    padding: 2px 0 0 0;
 
     li:not(:last-child) {
       padding-bottom: 20px;
@@ -174,8 +174,8 @@
   }
 }
 
-input[type='number'] {
-    -moz-appearance: textfield;
+input[type="number"] {
+  appearance: textfield;
 }
 
 // .form__pet-input::-webkit-outer-spin-button,
