--- a/source/less/blocks/partnership.less
+++ b/source/less/blocks/partnership.less
@@ -91,17 +91,17 @@
   display: block;
   width: 100%;
   background-color: #7a7a7a;
-  background-image: url(../img/partnership-map-img.png);
+  background-image: url("../img/partnership-map-img.png");
 
   @media (min-width: @tablet-width) {
     border: none;
     display: block;
     height: 400px;
-    background-image: url(../img/map-tablet.png);
+    background-image: url("../img/map-tablet.png");
   }
 
   @media (min-width: @desktop-width) {
-    background-image: url(../img/map-desk.png);
+    background-image: url("../img/map-desk.png");
   }
 }
 
