--- a/source/less/blocks/checkboxes.less
+++ b/source/less/blocks/checkboxes.less
@@ -1,18 +1,18 @@
-.checkboxes .form__list {
-  @media (min-width: @desktop-width) {
-    li:first-child {
-      padding-right: 104px;
-    }
+// .checkboxes .form__list {
+//   @media (min-width: @desktop-width) {
+//     li:first-child {
+//       padding-right: 104px;
+//     }
 
-    li:nth-child(2) {
-      padding-right: 136px;
-    }
+//     li:nth-child(2) {
+//       padding-right: 136px;
+//     }
 
-    li:nth-child(3) {
-      padding-right: 197px;
-    }
-  }
-}
+//     li:nth-child(3) {
+//       padding-right: 197px;
+//     }
+//   }
+// }
 
 .checkboxes__label {
   padding-left: 46px;
