--- a/source/less/blocks/products-extra.less
+++ b/source/less/blocks/products-extra.less
@@ -40,7 +40,7 @@
       background-color: #68b738;
       width: 300%;
       top: 19%;
-      right: calc(100% + 39px);
+      right: 100%;
     }
   }
 
