--- a/source/less/blocks/products.less
+++ b/source/less/blocks/products.less
@@ -22,6 +22,7 @@
     grid-template-rows: repeat(4, 1fr);
     gap: 140px 60px;
     padding-bottom: 68px;
+    margin: 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -30,6 +31,7 @@
     grid-template-rows: repeat(2, 1fr);
     gap: 146px 80px;
     padding-bottom: 52px;
+    margin: 0 0 27px 0;
   }
 }
 
@@ -104,6 +106,7 @@
 
   @media (min-width: @desktop-width) {
     padding: 0;
+    margin: -50px 0 0;
   }
 }
 
@@ -122,6 +125,7 @@
 
   @media (min-width: @desktop-width) {
     padding: 0;
+    margin: -73px 0 0;
   }
 }
 
