--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -7,7 +7,7 @@
 
   @media (min-width: @tablet-width) {
     padding: 45px 30px 47px;
-    width: 708px;
+    width: 768px;
     position: relative;
 
     &::before {
@@ -64,12 +64,6 @@
   }
 
   @media (min-width: @desktop-width) {
-    // display: flex;
-    // flex-direction: row;
-    // flex-wrap: wrap;
-    // justify-content: space-between;
-    // margin: 0;
-
     display: grid;
     grid-template-columns: 320px 329px 322px 250px;
     grid-template-rows: auto;
@@ -96,93 +90,94 @@
     height: auto;
     align-items: unset;
     text-align: start;
+    box-sizing: border-box;
 
     p {
       padding: 0;
       text-align: left;
     }
 
-    &:first-child {
-      background-image: url("../img/advantages__number-1.png");
-      background-repeat: no-repeat;
-      background-position: bottom 13% right 23%;
-      width: 230px;
-      padding: 151px 0 57px;
-      margin-right: 147px;
-    }
-
-    &:nth-child(2) {
-      background-image: url("../img/advantages__number-2.png");
-      background-repeat: no-repeat;
-      background-position: bottom 30% right 5%;
-      width: 246px;
-      padding: 151px 0 57px;
-    }
-
-    &:nth-child(3) {
-      background-image: url("../img/advantages__number-3.png");
-      background-repeat: no-repeat;
-      background-position: bottom 10% right 5%;
-      width: 247px;
-      padding: 151px 0 57px;
-    }
-
-    &:last-child {
-      background-image: url("../img/advantages__number-4.png");
-      background-repeat: no-repeat;
-      background-position: bottom 12% right 0%;
-      width: 249px;
-      padding: 151px 0 57px;
-
-      p {
-        width: 242px;
-      }
+    &:not(:last-child) {
+      padding-bottom: 57px;
     }
   }
 
   @media (min-width: @desktop-width) {
     padding: 151px 0 57px 0;
+  }
+}
 
-    &:first-child {
-      background-image: url("../img/advantages__number-1.png");
-      background-repeat: no-repeat;
-      background-position: bottom 30% right 20%;
-      width: 230px;
-      padding: 151px 0 57px;
-      box-sizing: border-box;
-      margin-right: 0;
+.advantages__item-nutrients {
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/advantages__number-1.png");
+    background-repeat: no-repeat;
+    background-position: bottom 13% right 23%;
+    width: 230px;
+    padding: 151px 0 57px;
+    margin-right: 147px;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-position: bottom 30% right 20%;
+    width: 230px;
+    padding: 151px 0 57px;
+    box-sizing: border-box;
+    margin-right: 0;
+  }
+}
+
+.advantages__item-consistency {
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/advantages__number-2.png");
+    background-repeat: no-repeat;
+    background-position: bottom 30% right 5%;
+    width: 246px;
+    padding: 151px 0 57px;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-position: bottom 30% left 94%;
+    width: 246px;
+    padding: 151px 12px 57px 0;
+    // box-sizing: border-box;
+  }
+}
+
+.advantages__item-meal {
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/advantages__number-3.png");
+    background-repeat: no-repeat;
+    background-position: bottom 10% right 5%;
+    width: 247px;
+    padding: 151px 0 57px;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-position: bottom 30% right 7%;
+    width: 248px;
+    padding: 151px 0 57px;
+    box-sizing: border-box;
+  }
+}
+
+.advantages__item-duration {
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/advantages__number-4.png");
+    background-repeat: no-repeat;
+    background-position: bottom 12% right 0%;
+    width: 249px;
+    padding: 151px 0 57px;
+
+    p {
+      width: 242px;
     }
+  }
 
-    &:nth-child(2) {
-      background-image: url("../img/advantages__number-2.png");
-      background-repeat: no-repeat;
-      background-position: bottom 30% left 94%;
-      width: 246px;
-      padding: 151px 12px 57px 0;
-      box-sizing: border-box;
-    }
-
-    &:nth-child(3) {
-      background-image: url("../img/advantages__number-3.png");
-      background-repeat: no-repeat;
-      background-position: bottom 30% right 7%;
-      width: 248px;
-      padding: 151px 0 57px;
-      box-sizing: border-box;
-    }
-
-    &:last-child {
-      background-image: url("../img/advantages__number-4.png");
-      background-repeat: no-repeat;
-      background-position: bottom 30% right 3%;
-      width: 250px;
-      padding: 151px 0 57px;
-      box-sizing: border-box;
-
-      p {
-        width: 242px;
-      }
-    }
+  @media (min-width: @desktop-width) {
+    background-position: bottom 30% right 3%;
+    width: 250px;
+    padding: 151px 0 57px;
+    box-sizing: border-box;
   }
 }
 
