--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -5,6 +5,7 @@
   padding: 10px 20px 13px 20px;
   box-sizing: border-box;
   border-bottom: 1px solid #d9d9d9;
+  position: relative;
 
   @media (min-width: @tablet-width) {
     padding: 0 30px 62px 30px;
@@ -48,7 +49,6 @@
   background-repeat: no-repeat;
   cursor: pointer;
 }
-
 
 .header__logo-img {
   @media (min-width: @tablet-width) {
