--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,5 +1,4 @@
 .main-nav {
-  // display: block;
   position: absolute;
   left: 0;
   justify-content: center;
@@ -14,6 +13,10 @@
   }
 
   &--opened {
+    display: block;
+  }
+
+  &--nojs {
     display: block;
   }
 
